# pragmatic_script

./: Cargo.toml  README.md  test.pgs
pglex/pglex/: Cargo.toml
pglex/pglex-derive/: Cargo.toml
pglex/pglex-derive/src/: lib.rs
pglex/pglex/src/: lexable.rs  lexer.rs  lib.rs  token.rs
pglex/pglex/src/test/: lexer.rs
pgs/: Cargo.toml
pgs-std/: Cargo.toml
pgs-std/src/: lib.rs
pgs/pgs/: Cargo.toml
pgs/pgs-derive/: Cargo.toml
pgs/pgs-std/src/: lib.rs
pgs/pgs/src/: engine.rs  lib.rs
pgs/pgs/src/api/: adapter.rs  container.rs  error.rs  function.rs  mod.rs
pgs/pgs/src/codegen/: builder.rs  checker.rs  compiler.rs  container.rs  context.rs  data.rs  def.rs  instruction.rs  mod.rs  register.rs
pgs/pgs/src/parser/: ast.rs  lexer.rs  parser.rs
pgs/pgs/src/test/: compiler.rs  core.rs  engine.rs  lexer.rs  mod.rs  parser.rs
pgs/pgs/src/vm/: address.rs  core.rs  is.rs  mod.rs  register.rs
pgs/pgs/tests/: compiler.rs  core.rs  engine.rs  lexer.rs  parser.rs
pgs/src/: engine.rs  lib.rs
pgs/src/api/: container.rs  function.rs  mod.rs  module.rs  slice.rs
pgs/src/codegen/: builder.rs  checker.rs  compiler.rs  container.rs  context.rs  instruction.rs  mod.rs  program.rs
pgs/src/parser/: ast.rs  lexer.rs  parser.rs
pgs/src/test/: compiler.rs  core.rs  engine.rs  lexer.rs  parser.rs
pgs/src/vm/: address.rs  core.rs  is.rs  mod.rs
pgsh/: Cargo.toml
pgsh/src/: main.rs
src/: ast.rs  lexer.rs  lib.rs  parser.rs
src/parser/: ast.rs  lexer.rs  parser.rs
src/vm/: is.rs
test_scripts/: fib.pgs  test.pgs  test2.pgs  test3.pgs  while.pgs
