[package]
name = "pglex"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pglex"
path = "src/lib.rs"

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
pglex-derive = { path = "../pglex-derive", optional = true }

[features]
derive = [
    "pglex-derive"
]
default = [
    "derive"
]